--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy .NET API to IIS
+name: Deploy API via FTP
 
 on:
   push:
@@ -7,44 +7,41 @@ on:
 
 jobs:
   deploy:
+    name: Deploy to FTP
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4    
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Publish .NET Application
-      run: dotnet publish AluGo.sln --configuration Release --output ./Alugo
+      - name: Setup .NET 8
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
 
-    - name: Stop Nginx
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.WIN_HOST }}         
-        username: ${{ secrets.WIN_USERNAME }}
-        password: ${{ secrets.WIN_PASSWORD }}                     
-        port: ${{ secrets.WIN_PORT }}
-        script: |          
-          systemctl stop nginx          
+      - name: Restore Dependencies
+        run: dotnet restore
 
-    - name: Copy artifacts to Nginx
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.WIN_HOST }}         
-        username: ${{ secrets.WIN_USERNAME }}
-        password: ${{ secrets.WIN_PASSWORD }}                     
-        port: ${{ secrets.WIN_PORT }}       
-        source: "./Alugo/*"
-        target: "/var/www/Alugo" 
-        strip_components: 1
+      - name: Build Application
+        run: dotnet publish -c Release -o publish
 
-    - name: Start Nginx and Restart API Service
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.WIN_HOST }}         
-        username: ${{ secrets.WIN_USERNAME }}
-        password: ${{ secrets.WIN_PASSWORD }}                     
-        port: ${{ secrets.WIN_PORT }}  
-        script: |          
-          systemctl start nginx && systemctl restart api.service   
+      - name: Restart IIS
+        uses: appleboy/ssh-action@master
+        with:
+            host: ${{ secrets.WIN_HOST }}         
+            username: ${{ secrets.WIN_USERNAME }}
+            password: ${{ secrets.WIN_PASSWORD }}                    
+            port: ${{ secrets.WIN_SSH_PORT }}
+            script: |          
+              iisreset       
 
-            
+      - name: Deploy via FTP
+        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        with:
+          server: ${{ secrets.WIN_HOST }}
+          username: ${{ secrets.WIN_USERNAME }}
+          password: ${{ secrets.WIN_PASSWORD }}
+          local-dir: publish/
+          server-dir: /Alugo/
+          port: ${{ secrets.WIN_PORT }}
+          
