Update server directory in workflow configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,6 @@ jobs:
           username: ${{ secrets.WIN_USERNAME }}
           password: ${{ secrets.WIN_PASSWORD }}
           local-dir: publish/
-          server-dir: /Alugo/
+          server-dir: /AlugoAPI/
           port: ${{ secrets.WIN_PORT }}
           
