add string conexao

--- a/AluGo/appsettings.Development.json
+++ b/AluGo/appsettings.Development.json
@@ -1,8 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGo;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true",
-
-    
+    "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGo;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true"  
   },
   "Logging": {
     "LogLevel": {
