--- a/AluGo/appsettings.json
+++ b/AluGo/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGo;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
