--- a/AluGo/AluGo.csproj
+++ b/AluGo/AluGo.csproj
@@ -5,6 +5,16 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\Assinaturas\assinatura-locador.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\Assinaturas\assinatura-locador.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
