--- a/AluGo/AluGo.csproj
+++ b/AluGo/AluGo.csproj
@@ -16,6 +16,7 @@
     </Content>
   </ItemGroup>
 	<ItemGroup>
+		<PackageReference Include="MailKit" Version="4.13.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.19" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6">
@@ -26,6 +27,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="MimeKit" Version="4.13.0" />
 		<PackageReference Include="QuestPDF" Version="2024.6.0" />
 	</ItemGroup>
 
