--- a/AluGo/appsettings.Development.json
+++ b/AluGo/appsettings.Development.json
@@ -1,6 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGoDev;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true"  
+    "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGoDev;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "Email": {
+    "FromName": "AluGO",
+    "FromEmail": "ffdadalto@5625008.brevosend.com",
+    "Host": "smtp-relay.brevo.com",
+    "Port": 587,
+    "UseSsl": true,
+    "User": "ffdadalto@gmail.com",
+    "Password": "RQvz4NPrF7xI3aYg"
   },
   "Logging": {
     "LogLevel": {
