--- a/AluGo/appsettings.json
+++ b/AluGo/appsettings.json
@@ -2,6 +2,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGo;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
+  "Email": {
+    "FromName": "Sua Empresa",
+    "FromEmail": "no-reply@suaempresa.com",
+    "Host": "smtp.seuprovedor.com",
+    "Port": 587,
+    "UseSsl": true,
+    "User": "usuario",
+    "Password": "senha"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
