--- a/AluGo/appsettings.json
+++ b/AluGo/appsettings.json
@@ -3,13 +3,13 @@
     "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGo;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Email": {
-    "FromName": "Sua Empresa",
-    "FromEmail": "no-reply@suaempresa.com",
-    "Host": "smtp.seuprovedor.com",
+    "FromName": "AluGO",
+    "FromEmail": "ffdadalto@5625008.brevosend.com",
+    "Host": "smtp-relay.brevo.com",
     "Port": 587,
     "UseSsl": true,
-    "User": "usuario",
-    "Password": "senha"
+    "User": "ffdadalto@gmail.com",
+    "Password": "RQvz4NPrF7xI3aYg"
   },
   "Logging": {
     "LogLevel": {
