--- a/AluGo/appsettings.Development.json
+++ b/AluGo/appsettings.Development.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "user id=sa;data source=dadalto.dev.br;initial catalog=AluGoDev;persist security info=True;password=YKcj22bc&&;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Email": {
-    "FromName": "AluGO",
+    "FromName": "AluGO - Franchescolle",
     "FromEmail": "ffdadalto@5625008.brevosend.com",
     "Host": "smtp-relay.brevo.com",
     "Port": 587,
